# law-ontology-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/law_ontology_mcp/: __init__.py  prefixes.py  queries.py  server.py  sparql_client.py  visualization.py
src/law_ontology_mcp/templates/: network.html
tests/: test_sparql.py
