[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "law-ontology-mcp"
version = "1.0.0"
description = "법령 온톨로지 MCP 서버"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "wintenboy" },
]
keywords = ["mcp", "law", "sparql", "ontology", "korea", "legislation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "cachetools>=5.3.0",
]

[project.urls]
Homepage = "https://github.com/wintenboy/law-ontology-mcp"
Repository = "https://github.com/wintenboy/law-ontology-mcp"
Issues = "https://github.com/wintenboy/law-ontology-mcp/issues"

[project.scripts]
law-ontology-mcp = "law_ontology_mcp.server:main"
